--- a/composer.json
+++ b/composer.json
@@ -19,6 +19,7 @@
         "php": "^8.0.20",
         "illuminate/container": "^9.52",
         "opis/closure": "^3.6",
-        "symfony/var-dumper": "^6.0"
+        "symfony/var-dumper": "^6.0",
+        "hongxunpan/php-tools": "^2.4"
     }
 }
